@@ -1,8 +1,8 @@
 AUX adchpp-lan-2.8.0-fix_config_paths.patch 4034 SHA256 7a112f77e3d995a102703b85230610643f69cd4f99b35fcb22c3edc7c5e7a85b SHA512 02f7cff3a78d5dfc3025dc3ba6ab9afdf249af8db2e92083f2155f15774c39b5c04660f8215973c5060e42ba4e498ca6f90b33f3ad8d46d8241e4d244be80895 WHIRLPOOL bcdd543345eafa624494410771f299e3c794d423655e19220974700ce6b322bd99e723d8d94c7410a4769aa214c3b74e61bc91ed2ecd49d285f1a7d67ad39fb5
 AUX adchpp-lan-2.9.0-fix_cflags.patch 2402 SHA256 c0b8b3c47fd2cc64b56f0b6c1c4e4869649b91e0469768215f47bca528beec8c SHA512 3c167213ab72dfd945e6729056dac68614528e09810e1a2054bd780e74b64450d44f9fdf37e66fafb9e172ecf3045ef8ad2fe599d4227fce4ed71d813b4e74d0 WHIRLPOOL fe896d916bcf3979bf0cfbb09c927f0628f97dc308a63210164b4107d0b38613e569b6fa8d46aa11f0c4ef4e248bbe4edca562b32dfc3ffe543895028353a952
-AUX adchpp-lan.conf.d 328 SHA256 188b92162af1a305bcfd6e5d7a66c07fe9c35ee78c3787e43d4caf71b47bcc8d SHA512 35532da12c5b7fe04b5001dc769ff617d9857ea569610b4bff87271c2c9dbf49cdf89865777ee520734238c530e638475d69f0832d589e917c2e0f807d9b3fc2 WHIRLPOOL 5d77482388b916895c05f485f022a87175f3f53e2b2bcfcbf7609bc57d2722c7fd66ee4ed79c799d21df15bfa58405b21a31a93471456e0f24785145a3438dc7
-AUX adchpp-lan.init.d 521 SHA256 12a700093fe18c8c47f54c60ae445b344759d6b5eea37b553d4dc651611059ac SHA512 8ef6b4273259009d940e131440fa8ed4e7665671dad86f6a703cbf600ac7861353f2e97914ee22f884152195b15ebd7ef782000d2e0af500a418f624ca58eaa4 WHIRLPOOL 5a3a9f6bfcbb66736087c27735c7c304fa13aa2b59669e5e90afcec21bcbbad5ec0aaf2f7456a5f4ce5c0d89602d2c39e49a2b327950aec749422dddeb45e9f9
+AUX adchpp-lan.conf.d 408 SHA256 b1988c06279014462391d27c3ab6e6ca07e7204f54544160e949808d60b78e3a SHA512 c14fa6b3cd9c64610a8fb5057c98126f38401b18239d78268a4c7e9c6e74fa33ed7a7feb19fbb9f1b1e9b84b31c01d30d1cfce8a9b22dc0b5fe6182a284fbacc WHIRLPOOL 9f8489265e6fa039f038ec5a1c89c935dfab50870ef2d586b464ea6b70b21fa810f2052cf43dba9e10e5272d3ba8b3dc1f4a18ac747fb77a7c1facbaf6dd3ed0
+AUX adchpp-lan.init.d 568 SHA256 37a7ee707036e17c7990cd418d1173464fe97960a6be21f5bed5c1b09280d7d2 SHA512 38c809e58da0e9ca51f135c34f80fa9a376c025253e07fd59dd7d9d4fb816907fa21013b5217ee00dabd3e21e4af8c8b865e3d0b56828db454b26e4e4893d7c0 WHIRLPOOL 6b592940bd70058fe0226a09cbbc4bb9bfad68911f9723f92365cdb11e332aa24683b392d057168e0a08f5b79c7bc4bac8fdd1ae485a6a523a45da2970b3e94e
 AUX adchpp_runner.sh 185 SHA256 3fc062bea86aa313c20315a293c0164bf52fe272c0e46d0e2753cc29b5ca89cb SHA512 60eb17ed3c3d2244bbdf77e00a413a97da82cb2045e0761c7e86951ce31b7e8de7d3470fd420a0f2b09f0f0f46ab1125f49a1f289bc8cfcf49a7436fb79f1e3c WHIRLPOOL 04b60a57145ac8a8bb835a7bd2b23293fa913c78dbdcb93c070b8590188ee930a1cc4a8fe766cba21c50d42d680db359e0d4a051dd1ac7c9b84466b3db7c2503
 EBUILD adchpp-lan-9999.ebuild 4258 SHA256 8b56d3455dc3d987795a8bc403825a1c919d57e49e8ccb72d0c03d0b5ff20f64 SHA512 11d7a27767b910462befd55ff80b29a824fac3d1d768a1bfa16233b8f7fd2f996823d32940ca5e86f625ef347043f16895bd14f8918f836c38db57fbdb770aad WHIRLPOOL 57715cec8dcf76853868c66528f6f328d76887d3fa0260a231bd7c91ba5f29c36c0f80b09d6416716ffb6d9c760bde9c0177cc107b08ac9d95de0242cb121c3a
-MISC ChangeLog 848 SHA256 0b8b9f3b97f3747c3f7e4da4f156e69a95b82402a9940c83a465781dc7fc5529 SHA512 819752742ad2cc481f0eee1f262c7844ab1b9d03c88f1b75eee7bc7e3889df1376509993bac423ee6254aeb76c2afac19b16028eb084b6744c0962b6415f3b7b WHIRLPOOL 0f0a227ab3efd806f697f48bb779987e9efd8ba601b49d7f92966747173148a742f6f1da3a2b0b7cdf81bb37b82b419db6f398530b0172fea9406d149cda5f6c
+MISC ChangeLog 977 SHA256 60bc7aaaeec3818fd9e6c608c8547dff7c531cbfe5ffd4cdc9805a2c47febe64 SHA512 a7995f192e474e823a95ad0f59bad0ae9a2f6163273d8913b3b3eb4f7b1d3c70c77ce61e73fbeb1880dada4ea9e20163e2896feedaa81bb10b1d74d90b3c0f4d WHIRLPOOL c63c8a81e17df263f6754d4c5f0db18ef89b9be5598f8b38d922f15972b2f81770ec2dff5c3a5dda883c7f0d4ea15952bb9ee1bb41016067aff54b248f4f4896
 MISC metadata.xml 644 SHA256 a850bd20d7c3201bc1fb65ed02167dde40a4ed8cc15d4722ac03d632a0d222aa SHA512 b9266a517faf5fa7ae627c9f9ffdac3b6e067a429b5129fe1d750ce7d8f2fb5b41aa1f663bfedd411974b17ec82f83e8a15a92b4cdfebf82fd0d9248ff2ea5fe WHIRLPOOL fec9e7f00c88b571e43739c8aebff03d97d3aedc888355005809c68ae79de60642db489b93a7470b72064ac5aa74bd0fd70897d6a54b48f64be0c9cb1b68bce9
