@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Feb 2013; Francisco Blas Izquierdo Riera (klondike)
+  files/adchpp-lan.conf.d, files/adchpp-lan.init.d:
+  Keep the outputs
+
   25 Feb 2013; Francisco Blas Izquierdo Riera (klondike)
   adchpp-lan-9999.ebuild, metadata.xml:
   Adding support for using the system boost libraries
